change twig files

--- a/Resources/views/Tools/desktopdisplay.html.twig
+++ b/Resources/views/Tools/desktopdisplay.html.twig
@@ -1,1 +1,8 @@
-desktop display in twig
+{% extends 'ClarolineCoreBundle:Desktop:layout.html.twig' %}
+{% block section_content %}
+    <div class="panel-heading">
+        <h3 class="panel-title">header</h3>
+    </div>
+    <div class="panel-body">desktop display in twig</div>
+    <div class="panel-footer">footer</div>
+{% endblock %}
