--- a/Resources/views/Tools/workspacedisplay.html.twig
+++ b/Resources/views/Tools/workspacedisplay.html.twig
@@ -1,1 +1,8 @@
-workspace display
+{% extends 'ClarolineCoreBundle:Workspace:layout.html.twig' %}
+{% block section_content %}
+    <div class="panel-heading">
+        <h3 class="panel-title">header</h3>
+    </div>
+    <div class="panel-body">WS display in twig</div>
+    <div class="panel-footer">footer</div>
+{% endblock %}
